# lesswrong-mcp

./: .dockerignore  .gitignore  .mcpbignore  CLAUDE.md  Dockerfile  LICENSE  README.md  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
lesswrong_mcp/: __init__.py  __main__.py  cli.py  config.py  graphql_resolve.py  http_client.py  markdown.py  server.py  tools.py
tests/: conftest.py  test_config_env.py  test_configure_http.py  test_errors.py  test_get_markdown.py  test_graphql.py  test_lifecycle.py  test_lw_filter_posts.py  test_lw_get_comments.py  test_lw_get_post.py  test_lw_get_sequence.py  test_lw_get_tag.py  test_lw_get_user.py  test_lw_list_feed.py  test_lw_search.py  test_markdown_helpers.py  test_request.py  test_ssrf_redirect.py  test_tool_schema.py
